--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  just_audio: ^0.9.28
   freezed: ^2.1.0+1
+  just_audio: ^0.9.28
+  just_audio_background: ^0.0.1-beta.7
+  audio_service: ^0.18.7
 
 dev_dependencies:
   flutter_test:
